add clang formatter hook

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,6 +1,5 @@
 {
-    //"image": "ubuntu:latest",
-    "image": "docker.io/library/avr-ubuntu:0.0.1",
+    "image": "docker.io/library/avr-ubuntu:0.0.2",
     "settings": {
         "terminal.integrated.shell.linux": "/bin/bash"
     },
@@ -10,10 +9,7 @@
           "extensions": [
             "eamodio.gitlens",
             "llvm-vs-code-extensions.vscode-clangd",
-            "zchrissirhcz.cmake-highlight",
-            "ms-vscode.cpptools",
-            "ms-vscode.cpptools-extension-pack"
-
+            "zchrissirhcz.cmake-highlight"
         ]
         }
     },
