added gtests and a test of it, spagetti together the cmakelists..

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,8 +9,10 @@ RUN apt-get update \
     clangd \
     clang-format \
     git \
+    libgtest-dev \
 
     cmake \
+    ccache \
     gcc-avr \
     avr-libc \
 
