--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,82 +1,102 @@
 cmake_minimum_required(VERSION 2.8.12)
 
 
-set(AVR_MCU "atmega328p")
-set(MCU_SPEED "4000000UL")
 
-set(AVR_PROGRAMMER usbasp) 
-set(AVR_UPLOADTOOL avrdude)
-set(AVR_UPLOADTOOL_BAUDRATE 9600)
+if(NOT DEFINED AVR)
+   set(AVR 1)
+endif(NOT DEFINED AVR)
 
-# Awesome fuse helper gui: https://www.engbedded.com/fusecalc/
-set(AVR_H_FUSE 0xd9)
-set(AVR_L_FUSE 0xc3)
+# message(STATUS "AVR222222 is set to: ${AVR}")
 
+if(AVR)
 
+   set(AVR_MCU "atmega328p")
+   set(MCU_SPEED "4000000UL")
 
-set(AVR_ROOT "/usr/lib")
-set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/cmake/gcc-avr.toolchain.cmake")
+   set(AVR_PROGRAMMER usbasp)
+   set(AVR_UPLOADTOOL avrdude)
+   set(AVR_UPLOADTOOL_BAUDRATE 9600)
 
-project(swing)
+   # Awesome fuse helper gui: https://www.engbedded.com/fusecalc/
+   set(AVR_H_FUSE 0xd9)
+   set(AVR_L_FUSE 0xc3)
 
+   message(STATUS "AVR is set to: ${AVR}")
 
-message(STATUS "Current uploadtool is: ${AVR_UPLOADTOOL}")
-message(STATUS "Current programmer is: ${AVR_PROGRAMMER}")
-message(STATUS "Current upload port is: ${AVR_UPLOADTOOL_PORT}")
-message(STATUS "Current uploadtool options are: ${AVR_UPLOADTOOL_OPTIONS}")
-message(STATUS "Current MCU is set to: ${AVR_MCU}")
-message(STATUS "Current H_FUSE is set to: ${AVR_H_FUSE}")
-message(STATUS "Current L_FUSE is set to: ${AVR_L_FUSE}")
+   message(STATUS "AVR is setASDSSDSDAASDSD to: ")
 
-if(NOT CMAKE_BUILD_TYPE)
-   set(CMAKE_BUILD_TYPE Release)
-endif(NOT CMAKE_BUILD_TYPE)
+   set(AVR_ROOT "/usr/lib")
+   set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/cmake/gcc-avr.toolchain.cmake")
+   set(PROJECT_NAME swing)
+   project(${PROJECT_NAME})
 
+   message(STATUS "Current uploadtool is: ${AVR_UPLOADTOOL}")
+   message(STATUS "Current programmer is: ${AVR_PROGRAMMER}")
+   message(STATUS "Current upload port is: ${AVR_UPLOADTOOL_PORT}")
+   message(STATUS "Current uploadtool options are: ${AVR_UPLOADTOOL_OPTIONS}")
+   message(STATUS "Current MCU is set to: ${AVR_MCU}")
+   message(STATUS "Current H_FUSE is set to: ${AVR_H_FUSE}")
+   message(STATUS "Current L_FUSE is set to: ${AVR_L_FUSE}")
 
-
-##########################################################################
-# set compiler options for build types
-##########################################################################
-if(CMAKE_BUILD_TYPE MATCHES Release)
-   set(CMAKE_C_FLAGS_RELEASE "-Os")
-   set(CMAKE_CXX_FLAGS_RELEASE "-Os")
-endif(CMAKE_BUILD_TYPE MATCHES Release)
-
-if(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
-   set(CMAKE_C_FLAGS_RELWITHDEBINFO "-Os -save-temps -g -gdwarf-3 -gstrict-dwarf")
-   set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-Os -save-temps -g -gdwarf-3 -gstrict-dwarf")
-endif(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
-
-if(CMAKE_BUILD_TYPE MATCHES Debug)
-   set(CMAKE_C_FLAGS_DEBUG "-O0 -save-temps -g -gdwarf-3 -gstrict-dwarf")
-   set(CMAKE_CXX_FLAGS_DEBUG "-O0 -save-temps -g -gdwarf-3 -gstrict-dwarf")
-endif(CMAKE_BUILD_TYPE MATCHES Debug)
+   if(NOT CMAKE_BUILD_TYPE)
+      set(CMAKE_BUILD_TYPE Release)
+   endif(NOT CMAKE_BUILD_TYPE)
 
 
-add_definitions("-DF_CPU=${MCU_SPEED}")
-add_definitions("-fpack-struct")
-add_definitions("-fshort-enums")
-add_definitions("-Wall")
-add_definitions("-Werror")
-add_definitions("-pedantic")
-add_definitions("-pedantic-errors")
-add_definitions("-funsigned-char")
-add_definitions("-funsigned-bitfields")
-add_definitions("-ffunction-sections")
-add_definitions("-c")
+   ##########################################################################
+   # set compiler options for build types
+   ##########################################################################
+   if(CMAKE_BUILD_TYPE MATCHES Release)
+      set(CMAKE_C_FLAGS_RELEASE "-Os")
+      set(CMAKE_CXX_FLAGS_RELEASE "-Os")
+   endif(CMAKE_BUILD_TYPE MATCHES Release)
 
-##########################################################################
-# include search paths
-##########################################################################
-include_directories("${PROJECT_SOURCE_DIR}")
+   if(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
+      set(CMAKE_C_FLAGS_RELWITHDEBINFO "-Os -save-temps -g -gdwarf-3 -gstrict-dwarf")
+      set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-Os -save-temps -g -gdwarf-3 -gstrict-dwarf")
+   endif(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
 
-##########################################################################
-# building library and application in their subdirectories
-##########################################################################
-add_subdirectory(./src)
-add_subdirectory(./lib)
+   if(CMAKE_BUILD_TYPE MATCHES Debug)
+      set(CMAKE_C_FLAGS_DEBUG "-O0 -save-temps -g -gdwarf-3 -gstrict-dwarf")
+      set(CMAKE_CXX_FLAGS_DEBUG "-O0 -save-temps -g -gdwarf-3 -gstrict-dwarf")
+   endif(CMAKE_BUILD_TYPE MATCHES Debug)
 
-# add_avr_executable(${PROJECT_NAME}
-# 	src/main.cpp
-# )
 
+   add_definitions("-DF_CPU=${MCU_SPEED}")
+   add_definitions("-fpack-struct")
+   add_definitions("-fshort-enums")
+   add_definitions("-Wall")
+   add_definitions("-Werror")
+   add_definitions("-pedantic")
+   add_definitions("-pedantic-errors")
+   add_definitions("-funsigned-char")
+   add_definitions("-funsigned-bitfields")
+   add_definitions("-ffunction-sections")
+   add_definitions("-c")
+
+   ##########################################################################
+   # include search paths
+   ##########################################################################
+   include_directories("${PROJECT_SOURCE_DIR}")
+
+   ##########################################################################
+   # building library and application in their subdirectories
+   ##########################################################################
+   set(TARGET_LIBRARY swing_static)
+   add_subdirectory(src/)
+
+endif(AVR)
+
+if (NOT AVR)
+   set(PROJECT_NAME swing_test)
+   project(${PROJECT_NAME})
+   message(STATUS "TEST AVR is set to: ${AVR} ${CMAKE_BINARY_DIR}")
+   enable_testing()
+   add_subdirectory(${CMAKE_SOURCE_DIR}/test/ EXCLUDE_FROM_ALL)
+   set(CMAKE_BINARY_DIR bins)
+   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bins)
+endif(NOT AVR)
+
+
+
+#message(FATAL_ERROR "asdasdassda ${CMAKE_SYSTEM_NAME}")
