--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update \
     && apt-get install -y \
 
     wget \
+    sudo \
     vim \
     clangd \
     clang-format \
@@ -30,5 +31,10 @@ RUN git config --global core.editor vim
 
     #simavr
 #TODO add non-root user
+RUN useradd -ms /bin/bash dev
+RUN usermod -aG sudo dev && echo "dev ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/dev
+RUN chmod 0440 /etc/sudoers.d/dev
+
 RUN mkdir /workspace
 WORKDIR /workspace
+USER dev
