fix clan lang. server issue. More on how to flash.

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -5,6 +5,9 @@
         "terminal.integrated.shell.linux": "/bin/bash"
     },
     "runArgs": [ "--device=/dev/bus/usb/" ],
+    "remoteEnv": {
+    "CXX" : "avr-g++"
+    },
 
     "customizations": {
         "vscode": {
