change folder name

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,13 +4,14 @@
 add_avr_executable(${PROJECT_NAME}
    main.cpp
    something.cpp
-   "${PROJECT_SOURCE_DIR}/include/lcd.c"
+   EventLoop.cpp
+   "${PROJECT_SOURCE_DIR}/external-libs/lcd.c"
    )
 
 avr_target_include_directories(${PROJECT_NAME}
    PUBLIC
       ${PROJECT_SOURCE_DIR}/src
-      ${PROJECT_SOURCE_DIR}/include
+      ${PROJECT_SOURCE_DIR}/external-libs
 )
 
 include_directories(
