--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,19 +3,24 @@ cmake_minimum_required(VERSION 3.22)
 set(PROJECT_NAME MY_TESTS)
 project(${PROJECT_NAME})
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_COMPILER g++)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=x86-64 -mtune=generic")
+set(CMAKE_BUILD_TYPE Debug)
 
 set(HDRS
   # "${CMAKE_SOURCE_DIR}/../include/lcd.h"
   "${CMAKE_SOURCE_DIR}/../src/something.h"
+  "${CMAKE_SOURCE_DIR}/../src/EventLoop.h"
 )
 
 set(SRCS
   # "${CMAKE_SOURCE_DIR}/../include/lcd.c"
   "${CMAKE_SOURCE_DIR}/../src/something.cpp"
+  "${CMAKE_SOURCE_DIR}/../src/EventLoop.cpp"
 )
 
 set(TARGET_LINUX_LIB swing_linux_static)
@@ -26,17 +31,19 @@ add_library(${TARGET_LINUX_LIB} STATIC ${SRCS} ${HDRS})
 target_include_directories(${TARGET_LINUX_LIB}
   PRIVATE
     /usr/lib/avr/include
-
 )
+
 include_directories(
   SYSTEM
     /usr/include/c++/11/
+    ${CMAKE_SOURCE_DIR}/../external-libs/StandardCplusplus
 )
 
 add_executable(${PROJECT_NAME}
   main.cpp
   test_template.cpp
-
+  test_EventLoop.cpp
+  # ${CMAKE_SOURCE_DIR}/../external-libs/StandardCplusplus/func_exception.cpp
 )
 
 find_package(GTest REQUIRED)
