--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,13 +12,15 @@ set(HDRS
   # "${CMAKE_SOURCE_DIR}/../include/lcd.h"
   "${CMAKE_SOURCE_DIR}/../src/SpiHandler.h"
   "${CMAKE_SOURCE_DIR}/../src/RegisterAccessor.h"
-  "/usr/lib/avr/include/avr/iom328p.h"
+  "${CMAKE_SOURCE_DIR}/../src/UartManager.h"
+  # "/usr/lib/avr/include/avr/iom328p.h"
 )
 
 set(SRCS
   # "${CMAKE_SOURCE_DIR}/../include/lcd.c"
   "${CMAKE_SOURCE_DIR}/../src/SpiHandler.cpp"
   "${CMAKE_SOURCE_DIR}/../src/RegisterAccessor.cpp"
+  "${CMAKE_SOURCE_DIR}/../src/UartManager.cpp"
 )
 
 set(TARGET_LINUX_LIB swing_linux_static)
