--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,40 +26,10 @@ jobs:
         run: docker build -f docker/Dockerfile -t avr-ubuntu .
 
       - name: Run unit tests
-        run: docker run --rm avr-ubuntu python -m unittest discover
+        run: docker run --rm avr-ubuntu /workspaces/swing/build_and_run_unittest.sh
 
       - name: Publish test results
         uses: actions/upload-artifact@v2
         with:
           name: test-results
           path: test-results
-
-      - name: Compile Examples
-        run: |
-          for example in $(find examples/ | grep Makefile); do
-            (cd $(dirname $example) && make -j4 STD=${{ matrix.standard }})
-          done
-
-
-          name: Build and Test
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-
-
-      - name: Build Docker image
-        run: docker build -t myimage .
