--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image
-        run: docker build -f docker/Dockerfile -t avr-ubuntu .
+        run: docker build -f /workspaces/swing/docker/Dockerfile -t avr-ubuntu .
 
       - name: Run unit tests
         run: docker run --rm avr-ubuntu /workspaces/swing/build_and_run_unittest.sh
