fix vscode "Rename" functionality

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,4 +10,4 @@ repos:
     hooks:
     -   id: clang-format
         args: [-i, --style=file]
-        exclude: '.devcontainer.json'
+        exclude_types: ['json']
