--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
 
     "clangd.path": "/usr/bin/clangd",
     "clangd.arguments": [
-        "--compile-commands-dir=/workspaces/swing/build/", "-query-driver=/usr/bin/avr-g++"
+        "--compile-commands-dir=/workspaces/swing/build/", "-query-driver=/usr/bin/avr-g++", "-cross-file-rename"
     ]
 }
