--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,7 +15,11 @@ set(HDRS
   "${CMAKE_SOURCE_DIR}/../src/SpiHandler.h"
   "${CMAKE_SOURCE_DIR}/../src/RegisterManager.h"
   "${CMAKE_SOURCE_DIR}/../src/UartManager.h"
+  # "${CMAKE_SOURCE_DIR}/../src/ConfigGetter.h"
+  "${CMAKE_SOURCE_DIR}/../src/AccelerometerHandler.h"
+  # "${CMAKE_SOURCE_DIR}/../src/HardwareSetup.h"
   # "/usr/lib/avr/include/avr/iom328p.h"
+  "${CMAKE_SOURCE_DIR}/../src/Adxl345ConfigGetter.h"
 )
 
 set(SRCS
@@ -23,6 +27,9 @@ set(SRCS
   "${CMAKE_SOURCE_DIR}/../src/SpiHandler.cpp"
   "${CMAKE_SOURCE_DIR}/../src/RegisterManager.cpp"
   "${CMAKE_SOURCE_DIR}/../src/UartManager.cpp"
+  # "${CMAKE_SOURCE_DIR}/../src/ConfigGetter.cpp"
+  "${CMAKE_SOURCE_DIR}/../src/AccelerometerHandler.cpp"
+  "${CMAKE_SOURCE_DIR}/../src/Adxl345ConfigGetter.cpp"
 )
 
 set(TARGET_LINUX_LIB swing_linux_static)
@@ -46,6 +53,8 @@ add_executable(${PROJECT_NAME}
   test_SpiHandler.cpp
   test_RegisterManager.cpp
   test_UartManager.cpp
+  test_AccelerometerHandler.cpp
+  test_Adxl345ConfigGetter.cpp
 
 )
 
